# ivado-assignment

./: .gitignore  Dockerfile  README.md  pyproject.toml  setup.sh
ivado_assignment/: config.py  data_cleaner.py  data_splitter.py  dot_dict.py  get_metrics.py  inference.py  models.py  training.py
ivado_assignment/data_processors/: cleaner.py
ivado_assignment/settings/: data.py  models.py
ivado_assignment/utils/: data_loader.py
notebooks/: eda.ipynb  sandbox-model.ipynb  sandbox.ipynb
tests/: test_data_cleaner.py  test_data_splitter.py  test_ivado_assignment.py
