[tool.poetry]
name = "ivado-assignment"
version = "0.1.0"
description = ""
authors = ["nerdai <andrei@nerdai.io>"]
readme = "README.md"
packages = [{include = "ivado_assignment"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.2"
pandas = "^1.5.3"
scikit-learn = "^1.2.2"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pylint = "^2.17.0"
jupyterlab = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
